--- a/portfolio.html
+++ b/portfolio.html
@@ -10,30 +10,30 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
 	<body>
-		<header class="page-header">
-			<div class="container main-header">
+		<header class="header">
+			<div class="container header__container">
 				<a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
 				</a>
 				<div>
 					<nav>
-						<ul class="site-nav list">
-							<li class="item"><a href="./index.html" class="link">Студия</a></li>
-							<li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-							<li class="item"><a href="" class="link">Контакты</a></li>
+						<ul class="site-nav">
+							<li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link">Студия</a></li>
+							<li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--active">Портфолио</a></li>
+							<li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
 						</ul>
 					</nav>
 				</div>
-				<ul class="contacts list">
-					<li class="item contacts"><a href="mailto:info@devstudio.com" class="link contacts text">
-						<svg class="link-icon" width="16px" height="12px">
+				<ul class="header-contacts">
+					<li class="header-contacts__item"><a href="mailto:info@devstudio.com" class="header-contacts__link">
+						<svg class="header-contacts__icon" width="16px" height="12px">
 							<use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use>
 						</svg>
 						info@devstudio.com</a></li>
-					<li class="item contacts"><a href="tel:+380961111111" class="link contacts text">
-						<svg class="link-icon" width="10px" height="16px">
+					<li class="header-contacts__item"><a href="tel:+380961111111" class="header-contacts__link">
+						<svg class="header-contacts__icon" width="10px" height="16px">
 							<use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
 						</svg>
 						+38 096 111 11 11</a></li>
@@ -42,124 +42,124 @@
 		</header>
 
 		<main>
-			<section class="section">
+			<section class="section portfolio">
 				<div class="container">
-					<h1 class="visually-hidden">Портфолио</h1>
-					<ul class="filter list">
-						<li class="item"><button type="button" class="button secondary">Все</button></li>
-						<li class="item"><button type="button" class="button secondary">Веб-сайты</button></li>
-						<li class="item"><button type="button" class="button secondary">Приложения</button></li>
-						<li class="item"><button type="button" class="button secondary">Дизайн</button></li>
-						<li class="item"><button type="button" class="button secondary">Маркетинг</button></li>
+					<h1 class="visually-hidden portfolio__title">Портфолио</h1>
+					<ul class="portfolio-filter">
+						<li class="portfolio-filter__item"><button type="button" class="button portfolio-filter__button">Все</button></li>
+						<li class="portfolio-filter__item"><button type="button" class="button portfolio-filter__button">Веб-сайты</button></li>
+						<li class="portfolio-filter__item"><button type="button" class="button portfolio-filter__button">Приложения</button></li>
+						<li class="portfolio-filter__item"><button type="button" class="button portfolio-filter__button">Дизайн</button></li>
+						<li class="portfolio-filter__item"><button type="button" class="button portfolio-filter__button">Маркетинг</button></li>
 					</ul>
 				
-					<ul class="portfolio list">
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+					<ul class="portfolio-project">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/project-1.jpg" alt="макбук" width="370"/>
-									<p class="portfolio-thumb-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+									<p class="portfolio-project__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Технокряк</h2>
-									<p class="portfolio-text">Веб-сайт</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Технокряк</h2>
+									<p class="portfolio-project__category">Веб-сайт</p>
 								</div>
 								
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-2.jpg" alt="игра в баскетбол" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-									<p class="portfolio-text">Дизайн</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Постер New Orlean vs Golden Star</h2>
+									<p class="portfolio-project__category">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-3.jpg" alt="логотип Seafood" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Ресторан Seafood</h2>
-									<p class="portfolio-text">Приложение</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Ресторан Seafood</h2>
+									<p class="portfolio-project__category">Приложение</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-4.jpg" alt="наушники" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Проект Prime</h2>
-									<p class="portfolio-text">Маркетинг</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Проект Prime</h2>
+									<p class="portfolio-project__category">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-5.jpg" alt="две коробки" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Проект Boxes</h2>
-									<p class="portfolio-text">Приложение</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Проект Boxes</h2>
+									<p class="portfolio-project__category">Приложение</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-6.jpg" alt="компьютер" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Inspiration has no Borders</h2>
-									<p class="portfolio-text">Веб-сайт</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Inspiration has no Borders</h2>
+									<p class="portfolio-project__category">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-7.jpg" alt="раскрытая книга" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Издание Limited Edition</h2>
-									<p class="portfolio-text">Дизайн</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Издание Limited Edition</h2>
+									<p class="portfolio-project__category">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-8.jpg" alt="этикетка" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Проект LAB</h2>
-									<p class="portfolio-text">Маркетинг</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Проект LAB</h2>
+									<p class="portfolio-project__category">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-item">
-							<a href="" class="portfolio-link">
-								<div class="portfolio-thumb">
+						<li class="portfolio-project__item">
+							<a href="" class="portfolio-project__link">
+								<div class="portfolio-project__thumb">
 									<img src="./images/Project-9.jpg" alt="ноутбук" width="370" height="294"/>
-									<p class="portfolio-thumb-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
+									<p class="portfolio-project__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellendus facere eius officiis omnis fugit mollitia sit! Harum rerum voluptates necessitatibus eveniet reiciendis pariatur ratione fuga veniam autem? Amet, inventore.</p>
 								</div>
-								<div class="portfolio-content">
-									<h2 class="portfolio-title">Growing Business</h2>
-									<p class="portfolio-text">Приложение</p>
+								<div class="portfolio-project__content">
+									<h2 class="portfolio-project__title">Growing Business</h2>
+									<p class="portfolio-project__category">Приложение</p>
 								</div>
 							</a>
 						</li>
@@ -168,49 +168,47 @@
 			</section>
 		</main>
 
-				<footer class="footer">
-			<div class="container footer-content">
+		<footer class="footer">
+			<div class="container footer__container">
 				<div class="footer-contacts">
-					<a href="/index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
-					<address class="address">
-						<ul class="list">
-							<li class="item">
+					<a href="/index.html" class="logo footer__logo"><span class="logo-accent">Web</span>Studio</a>
+					<address>
+						<ul class="footer-contacts__list">
+							<li class="footer-contacts__item">
 								<a
 									href="https://goo.gl/maps/6p5DjgwjbaoBaa989"
 									target="_blank"
 									rel="noopener noreferrer nofollow"
-									class="location link"
+									class="footer-contacts__location"
 								>
 									г. Киев, пр-т Леси Украинки, 26
 								</a>
 							</li>
-							<li class="item"><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
-							<li class="item"><a href="tel:+380961111111" class="contact link">+38 096 111 11 11</a></li>
+							<li class="footer-contacts__item"><a href="mailto:info@devstudio.com" class="footer-contacts__link">info@devstudio.com</a></li>
+							<li class="footer-contacts__item"><a href="tel:+380961111111" class="footer-contacts__link">+38 096 111 11 11</a></li>
 						</ul>
 					</address>
 				</div>			
-				<div class="footer-social">
-					<b class="social-title">присоединяйтесь</b>
-					<ul class="social-list list">
-						<li class="item"><a href="" class="social-link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-						<li class="item"><a href="" class="social-link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-						<li class="item"><a href="" class="social-link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-						<li class="item"><a href="" class="social-link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+				<div class="footer-follow">
+					<b class="footer-follow__title">присоединяйтесь</b>
+					<ul class="footer-follow__list">
+						<li class="footer-follow__item"><a href="" class="footer-follow__link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+						<li class="footer-follow__item"><a href="" class="footer-follow__link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+						<li class="footer-follow__item"><a href="" class="footer-follow__link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+						<li class="footer-follow__item"><a href="" class="footer-follow__link"><svg width="20px" height="20px"><use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
 					</ul>
 				</div>
 				<div class="footer-join">
-					<b class="join-title">Подпишитесь на рассылку</b>
-					<form>
-						<div class="join-form">
-							<label for="email">
-								<input type="email" name="email" placeholder="E-mail" class="input-submit"/>
-							</label>
-							<button type="submit" class="button join">Подписаться
-							<svg class="button-join-icon" width="24px" height="24px">
+					<b class="footer-join__title">Подпишитесь на рассылку</b>
+					<form class="footer-join__form">
+						<label>
+							<input type="email" name="email" placeholder="E-mail" class="footer-join__input"/>
+						</label>
+						<button type="submit" class="button footer-button">Подписаться
+							<svg class="footer-button__icon" width="24px" height="24px">
 								<use href="./images/icons.svg/symbol-defs.svg#icon-send"></use>
 							</svg>
-						</button>
-						</div>					
+						</button>				
 					</form>
 				</div>
 			</div>
