Розділяє main по секціям, виправляє колір тексту сайту навігації

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 					<b class="footer-join__title">Подпишитесь на рассылку</b>
 					<form class="footer-join__form">
 						<label>
-							<input type="email" name="email" placeholder="E-mail" class="footer-join__input"/>
+							<input required type="email" name="email" placeholder="E-mail" class="footer-join__input"/>
 						</label>
 						<button type="submit" class="button footer-button">Подписаться
 							<svg class="footer-button__icon" width="24px" height="24px">
